# fdenser-sca

./: pyproject.toml
example/: cnn.grammar  config.yml  cpu.yml  gpu.yml  sca.grammar  sca_full.grammar  sca_long.yml  sca_med.yml  sca_short.yml
src/fdenser/: __init__.py  cli.py  config.py  engine.py  evaluator.py  execution.py  individual.py  module.py
src/fdenser/img/: data.py
src/fdenser/sca/: ascad.py  data.py  metrics.py  sca_data.py
