[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fdenser-sca"
version = "0.0.1"
dependencies = [
  "keras==2.13.1",
  "numpy",
  "scikit-learn",
  "tensorflow==2.13.1",
  "pyyaml",
]
requires-python = ">=3.8"
authors = [
  {name = "Mattia Napoli"},
]
maintainers = [
  {name = "Mattia Napoli"},
]
description = "FastDenser++ adaptation to Side Channel Analysis"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.scripts]
fastdenser = "fdenser.cli:fast_denser_cli"

[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/MattiaDev/fdenser-sca.git"
